--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ text-align: center;
 border-bottom: 3px solid black;
 padding:10px;
 margin-bottom:0;
+margin-top:0;
 }
 ol {font-size: 18px;
   border-right: 2px solid black;
